--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -11,12 +11,13 @@
     @media screen and(min-width:768px) {
       display: flex;
       align-items: baseline;
-      justify-content: space-around;
+      justify-content: space-between;
     }
     @media screen and (max-width: 767px) {
       margin-bottom: 60px;
     }
-    @media screen and(min-width:768px) and(max-width:1199px) {
+    @media screen and(min-width:768px) 
+    and(max-width:1199px) {
       margin-bottom: 60px;
     }
   }
