--- a/css/main.css
+++ b/css/main.css
@@ -824,6 +824,66 @@
   }
 }
 
+.card-set__video {
+  max-width: 370px;
+}
+
+@media screen and (min-width: 768px) {
+  .card-set__video {
+    max-width: 350px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .card-set__video {
+    width: auto;
+  }
+}
+
+.portfolio-title {
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 1200px) {
+  .portfolio-title {
+    margin-bottom: 50px;
+  }
+}
+
+.portfolio__container {
+  text-align: center;
+}
+
+.portfolio__btn {
+  min-width: 200px;
+  padding: 10px 32px;
+  margin-top: 30px;
+  font-weight: 700;
+  line-height: 1.8;
+  letter-spacing: 0.06em;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  color: var(--main-light-color);
+  background-color: var(--accent-color);
+  transform: background-color var(--transition-time) var(--function-time);
+  min-width: 200px;
+  padding: 10px 32px;
+  font-weight: 700;
+  line-height: 1.8;
+  letter-spacing: 0.06em;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  color: var(--main-light-color);
+  background-color: var(--accent-color);
+  transform: background-color var(--transition-time) var(--function-time);
+}
+
+.portfolio__btn:hover, .portfolio__btn:focus {
+  background-color: var(--hover-btn-color);
+}
+
+.portfolio__btn:hover, .portfolio__btn:focus {
+  background-color: var(--hover-btn-color);
+}
+
 .portfolio__thumb {
   position: relative;
   display: flex;
@@ -967,7 +1027,7 @@
   .footer__wrapper {
     display: flex;
     align-items: baseline;
-    justify-content: space-around;
+    justify-content: space-between;
   }
 }
 
@@ -977,7 +1037,7 @@
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (min-width: 768px) {
   .footer__wrapper {
     margin-bottom: 60px;
   }
