--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -17,7 +17,7 @@
       margin-bottom: 60px;
     }
     @media screen and(min-width:768px) 
-    and(max-width:1199px) {
+    {
       margin-bottom: 60px;
     }
   }
