--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -23,10 +23,62 @@
 
   transition: box-shadow var(--transition-time) var(--function-time);
 }
+.card-set__video{
+  max-width: 370px;
+  @media screen and (min-width: 768px) {
+    max-width: 350px;
+  }
+  @media screen and (max-width: 767px) {
+    width: auto;
+  }
 
-.portfolio__title {
-  margin-bottom: 25px;
+}
+.portfolio-title {
+  
+  margin-bottom: 30px;
 
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+  }
+
+}
+.portfolio__container{
+  text-align: center;
+}
+.portfolio__btn{
+    @include size(200px, null);
+  padding: 10px 32px;
+  margin-top: 30px;
+  
+  font-weight: 700;
+  line-height: 1.8;
+  letter-spacing: 0.06em;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  color: var(--main-light-color);
+  background-color: var(--accent-color);
+
+  transform: background-color var(--transition-time) var(--function-time);
+
+  &:hover,
+  &:focus {
+    background-color: var(--hover-btn-color);
+  }  @include size(200px, null);
+  // min-width: 200px;
+  padding: 10px 32px;
+
+  font-weight: 700;
+  line-height: 1.8;
+  letter-spacing: 0.06em;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  color: var(--main-light-color);
+  background-color: var(--accent-color);
+
+  transform: background-color var(--transition-time) var(--function-time);
+
+  &:hover,
+  &:focus {
+    background-color: var(--hover-btn-color);
+  }
 }
 
 .portfolio__thumb {
